--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "radium": "^0.24.0",
     "react": "^16.3.2",
+    "react-calendar": "^2.14.0",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
   },
