--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "aws-api-gateway-client": "^0.2.12",
+    "body-parser": "^1.18.3",
     "config": "^1.30.0",
     "express": "^4.16.3",
     "npm": "^6.0.0"
